# BattleZone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/include/: game.hpp  types.hpp
backend/src/: main.cpp
backend/src/games/tic_tac_toe/: tic_tac_toe.cpp  tic_tac_toe.hpp
backend/src/server/: Server.hpp
backend/tests/: tic_tac_toe_main.cpp
src/: tic_tac_toe_main.cpp
src/common/games/: game.hpp
src/common/games/tic_tac_toe/: tic_tac_toe.cpp  tic_tac_toe.hpp
src/common/types/: game_types.hpp
src/server/: Server.hpp
